2002-01-22  Alex Larsson  <alexl@redhat.com>

	* src/yelp-man.c (yelp_man_push_initial_tree):
	Fix silly bug.

	* src/yelp-util.[ch]:
	Add functions to go between Nodes in the doc tree and
	string paths.

	* src/yelp-view-toc.c:
	Update man handling to GNodes.

2002-01-23  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yw_history_button_clicked): 
	- use string instead of YelpSection with history.

	* src/yelp-history.[ch]: work with strings instead of
	  YelpSection. 

2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added ms to ALL_LINGUAS.
	* po/ms.po: Added Malay Translation by
          Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com> and me.

2002-01-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c: started to rewrite to use GNode-tree
	  instead of GtkTreeStore.

	* src/yelp-base.c: use a GNode-tree instead of the GtkTreeStore.

	* src/yelp-window.c: dito.

	* src/yelp-scrollkeeper.[ch]: dito.

	* src/yelp-man.[ch]: dito.

	* src/yelp-info.[ch]: dito.

	* src/yelp-window.c: use stock items for menu.

2002-01-21  Alex Larsson  <alexl@redhat.com>

        * src/yelp-marshal.list:
	Add a boolean the the marshaller needed for url_selected

	* src/yelp-section.h:
	Fix typo in #endif
	
        * src/yelp-html.[ch]:
	Change section_selected to url_selected
	
	* src/yelp-view-content.[ch]:
	Add url_selected signal that proxies YelpHtml::url_selected
	Implement yelp_view_content_show_uri.

	* src/yelp-view-index.c:
	Change section_selected to url_selected

	* src/yelp-view-toc.[ch]:
	Change path_selected to url_selected
	More man index work.
	Moved startpage to it's own function.
	Exported yelp_view_toc_open_url().

	* src/yelp-window.c:
	Common way to follow link is now the url_selected signal
	on views.

2002-01-21  jacob berkman  <jacob@ximian.com>

	* src/Makefile.am (EXTRA_DIST): the .list file has a -

2002-01-21  Seth Nickell  <snickell@stanford.edu>

	* yelp.desktop.in:

	Call it "Help".
